fix: overflow problem

--- a/app/globals.css
+++ b/app/globals.css
@@ -88,7 +88,6 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-    overflow: hidden;
 }
 
 nav {
